# XRFID.CLI

./: .gitignore  API-SUBMENU-README.md  LICENSE  README.md  config.yaml  requirements-freeze.txt  requirements.txt  xrcli_entrypoint.py
docs/: CHANGELOG.md  README.md  (+3 more)
zebra_cli/rest_client/: README.md  pyproject.toml
zebra_cli/rest_client/io_t_connector_local_rest_ap_is_client/: __init__.py
zebra_cli/rest_client/io_t_connector_local_rest_ap_is_client/models/: __init__.py  access.py  access_config.py  access_type.py  action_blink_configuration.py  action_conditions_v1_type_1.py  action_conditions_v1_type_1_operator.py  all_.py  antenna_stop_condition.py  antenna_stop_condition_type.py  aws.py  aws_additional.py  aws_additional_qos.py  aws_endpoint.py  aws_security.py  azure.py  azure_additional.py  azure_additional_qos.py  azure_basic_authentication.py  azure_endpoint.py  azure_security.py  basic_authentication_for_external_server_connections.py  conditions_array_v1_item.py  cpu_stats.py  del_certificate_body.py  del_certificate_body_type.py  del_logs_syslog_log_type.py  delay_between_antenna_cycles.py  delay_between_antenna_cycles_type.py  directionality_settings.py  directionality_settings_aar.py  directionality_settings_advanced_config.py  directionality_settings_advanced_config_debug_level.py  directionality_settings_advanced_config_report_direction_item.py  directionality_settings_advanced_config_user_defined_type_1.py  directionality_settings_basic_config.py  directionality_settings_basic_config_beams.py  directionality_settings_basic_config_beams_beams_item.py  (+236 more)
(+69 files in other folders)
